public/server.txt
SERVER STARTED Sat Dec 05 2015 12:47:06 GMT+0000 (UTC)
Connection: 76.102.115.5 (Windows NT 10.0; Win64; x64)
Connection: 76.102.115.5 (Windows NT 10.0; Win64; x64)
Connection: 76.102.115.5 (Windows NT 10.0; Win64; x64)
Connection: 144.76.7.107 (compatible; MJ12bot/v1.4.5; http://www.majestic12.co.uk/bot.php?+)
Connection: 180.76.15.30 (compatible; Baiduspider/2.0; +http://www.baidu.com/search/spider.html)
Connection: 180.76.15.30 (compatible; Baiduspider/2.0; +http://www.baidu.com/search/spider.html)
Connection: 123.125.71.33 (Windows NT 5.1; rv:6.0.2)
Connection: 220.181.108.100 (Windows NT 5.1; rv:6.0.2)
Connection: 180.76.15.148 (compatible; Baiduspider/2.0; +http://www.baidu.com/search/spider.html)
Connection: 180.76.15.33 (compatible; Baiduspider/2.0; +http://www.baidu.com/search/spider.html)
Connection: 66.249.74.105 (compatible; Googlebot/2.1; +http://www.google.com/bot.html)
Connection: 173.255.243.26 (Macintosh; Intel Mac OS X 10.10; rv:41.0)
Connection: 180.76.15.142 (compatible; Baiduspider/2.0; +http://www.baidu.com/search/spider.html)
Connection: 180.76.15.153 (compatible; Baiduspider/2.0; +http://www.baidu.com/search/spider.html)
Connection: 173.255.243.26 (compatible; MSIE 9.0; Windows NT 6.0; Trident/5.0;  Trident/5.0)
Connection: 180.76.15.157 (compatible; Baiduspider/2.0; +http://www.baidu.com/search/spider.html)
Connection: 180.76.15.139 (compatible; Baiduspider/2.0; +http://www.baidu.com/search/spider.html)
Connection: 66.249.74.101 (iPhone; CPU iPhone OS 8_3 like Mac OS X)
Connection: 66.249.74.105 (compatible; Googlebot/2.1; +http://www.google.com/bot.html)
Connection: 180.76.15.155 (compatible; Baiduspider/2.0; +http://www.baidu.com/search/spider.html)
Connection: 180.76.15.20 (compatible; Baiduspider/2.0; +http://www.baidu.com/search/spider.html)
Connection: 185.53.78.144 (Macintosh; Intel Mac OS X 10_6_8)
Connection: 195.28.183.88 (X11; Ubuntu; Linux x86_64; rv:42.0)
Connection: 180.76.15.16 (compatible; Baiduspider/2.0; +http://www.baidu.com/search/spider.html)
Connection: 180.76.15.153 (compatible; Baiduspider/2.0; +http://www.baidu.com/search/spider.html)
Connection: 85.241.14.214 (Windows NT 6.1; WOW64)
Connection: 180.76.15.11 (compatible; Baiduspider/2.0; +http://www.baidu.com/search/spider.html)
Connection: 180.76.15.151 (compatible; Baiduspider/2.0; +http://www.baidu.com/search/spider.html)
error: restarting script because /home/alex/hkrnews.com/node_modules/express/node_modules/send/node_modules/.bin/mime changed
error: Forever detected script exited with code: null
error: Script restart attempt #1

module.js:340
    throw err;
          ^
Error: Cannot find module 'merge-descriptors'
    at Function.Module._resolveFilename (module.js:338:15)
    at Function.Module._load (module.js:280:25)
    at Module.require (module.js:364:17)
    at require (module.js:380:17)
    at Object.<anonymous> (/home/alex/hkrnews.com/node_modules/express/lib/express.js:6:13)
    at Module._compile (module.js:456:26)
    at Object.Module._extensions..js (module.js:474:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:312:12)
    at Module.require (module.js:364:17)
error: Forever detected script exited with code: 8
error: Script restart attempt #2

module.js:340
    throw err;
          ^
Error: Cannot find module 'merge-descriptors'
    at Function.Module._resolveFilename (module.js:338:15)
    at Function.Module._load (module.js:280:25)
    at Module.require (module.js:364:17)
    at require (module.js:380:17)
    at Object.<anonymous> (/home/alex/hkrnews.com/node_modules/express/lib/express.js:6:13)
    at Module._compile (module.js:456:26)
    at Object.Module._extensions..js (module.js:474:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:312:12)
    at Module.require (module.js:364:17)
error: Forever detected script exited with code: 8
error: Script restart attempt #3

module.js:340
    throw err;
          ^
Error: Cannot find module 'merge-descriptors'
    at Function.Module._resolveFilename (module.js:338:15)
    at Function.Module._load (module.js:280:25)
    at Module.require (module.js:364:17)
    at require (module.js:380:17)
    at Object.<anonymous> (/home/alex/hkrnews.com/node_modules/express/lib/express.js:6:13)
    at Module._compile (module.js:456:26)
    at Object.Module._extensions..js (module.js:474:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:312:12)
    at Module.require (module.js:364:17)
error: Forever detected script exited with code: 8
error: Script restart attempt #4

module.js:340
    throw err;
          ^
Error: Cannot find module 'ee-first'
    at Function.Module._resolveFilename (module.js:338:15)
    at Function.Module._load (module.js:280:25)
    at Module.require (module.js:364:17)
    at require (module.js:380:17)
    at Object.<anonymous> (/home/alex/hkrnews.com/node_modules/express/node_modules/on-finished/index.js:19:13)
    at Module._compile (module.js:456:26)
    at Object.Module._extensions..js (module.js:474:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:312:12)
    at Module.require (module.js:364:17)
error: Forever detected script exited with code: 8
error: Script restart attempt #5

module.js:340
    throw err;
          ^
Error: Cannot find module 'ee-first'
    at Function.Module._resolveFilename (module.js:338:15)
    at Function.Module._load (module.js:280:25)
    at Module.require (module.js:364:17)
    at require (module.js:380:17)
    at Object.<anonymous> (/home/alex/hkrnews.com/node_modules/express/node_modules/on-finished/index.js:19:13)
    at Module._compile (module.js:456:26)
    at Object.Module._extensions..js (module.js:474:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:312:12)
    at Module.require (module.js:364:17)
error: Forever detected script exited with code: 8
error: Script restart attempt #6

module.js:340
    throw err;
          ^
Error: Cannot find module 'ee-first'
    at Function.Module._resolveFilename (module.js:338:15)
    at Function.Module._load (module.js:280:25)
    at Module.require (module.js:364:17)
    at require (module.js:380:17)
    at Object.<anonymous> (/home/alex/hkrnews.com/node_modules/express/node_modules/on-finished/index.js:19:13)
    at Module._compile (module.js:456:26)
    at Object.Module._extensions..js (module.js:474:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:312:12)
    at Module.require (module.js:364:17)
error: Forever detected script exited with code: 8
error: Script restart attempt #7

module.js:340
    throw err;
          ^
Error: Cannot find module 'ee-first'
    at Function.Module._resolveFilename (module.js:338:15)
    at Function.Module._load (module.js:280:25)
    at Module.require (module.js:364:17)
    at require (module.js:380:17)
    at Object.<anonymous> (/home/alex/hkrnews.com/node_modules/express/node_modules/on-finished/index.js:19:13)
    at Module._compile (module.js:456:26)
    at Object.Module._extensions..js (module.js:474:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:312:12)
    at Module.require (module.js:364:17)
error: Forever detected script exited with code: 8
error: Script restart attempt #8

module.js:340
    throw err;
          ^
Error: Cannot find module 'crc'
    at Function.Module._resolveFilename (module.js:338:15)
    at Function.Module._load (module.js:280:25)
    at Module.require (module.js:364:17)
    at require (module.js:380:17)
    at Object.<anonymous> (/home/alex/hkrnews.com/node_modules/express/node_modules/etag/index.js:17:11)
    at Module._compile (module.js:456:26)
    at Object.Module._extensions..js (module.js:474:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:312:12)
    at Module.require (module.js:364:17)
error: Forever detected script exited with code: 8
error: Script restart attempt #9

module.js:117
    throw e;
          ^
SyntaxError: Error parsing /home/alex/hkrnews.com/node_modules/express/node_modules/send/node_modules/mime/package.json: Unexpected end of input
    at Object.parse (native)
    at readPackage (module.js:113:52)
    at tryPackage (module.js:123:13)
    at Function.Module._findPath (module.js:190:18)
    at Function.Module._resolveFilename (module.js:336:25)
    at Function.Module._load (module.js:280:25)
    at Module.require (module.js:364:17)
    at require (module.js:380:17)
    at Object.<anonymous> (/home/alex/hkrnews.com/node_modules/express/node_modules/send/index.js:18:12)
    at Module._compile (module.js:456:26)
error: Forever detected script exited with code: 8
error: Script restart attempt #10
SERVER STARTED Sat Dec 05 2015 23:57:19 GMT+0000 (UTC)
